<resources>
    <string name="app_name">Shopking</string>
    <string name="menu_item_catalogue_item_title">Catalogue</string>
    <string name="menu_item_shopping_list_item_title">Shopping List</string>
    <string name="menu_item_wish_list_item_title">Wish List</string>
    <string name="menu_item_recipes_item_title">Recipes</string>
    <string name="menu_item_information_item_title">Information</string>

    <string name="article_list_item_image_description">Article image</string>
    <string name="article_list_sale">%</string>
    <string name="article_details_company">Company</string>
    <string name="article_details_mass">Mass</string>
    <string name="article_details_price">Price</string>

    <string name="recipe_details_ingredients">Ingredients</string>
    <string name="recipe_details_recipe">Recipe</string>

    <string name="information_notifications_title">Notifications</string>
    <string name="information_notifications_content">Item %s from your Wish List is on Sale!</string>
    <string name="information_shops_title">Shops</string>

    <string name="toolbar_catalogue_title">Catalogue</string>
    <string name="toolbar_shopping_list_title">Shopping List</string>
    <string name="toolbar_wish_list_title">Wish List</string>
    <string name="toolbar_recipes_title">Recipes</string>
    <string name="toolbar_information_title">Information</string>
    <string name="toolbar_notifications_title">Notifications</string>
    <string name="toolbar_shops_title">Shops</string>
</resources>
